# VRA

./: README.md  pyproject.toml  pyproject_other.toml
assets/: mask_strategy_hunyuan_18_24_24.json  mask_strategy_hunyuan_30_40_40.json
eval/vbench_env/: pyproject.toml  sitecustomize.py
fastvideo/: envs.py  fastvideo_args.py  profiler.py
fastvideo-kernel/: CMakeLists.txt
fastvideo-kernel/benchmarks/: bench_vra.py  modal_bench_vra.py  modal_profile_vra.py  profile_vra_kernel_once.py  run_hunyuan_vra_h100_prompts.sh
fastvideo-kernel/csrc/: common_extension.cpp
fastvideo-kernel/csrc/attention/: packed_attn_h100.cu  vra_pack.cu
fastvideo-kernel/python/fastvideo_kernel/: __init__.py  ops.py
fastvideo-kernel/tests/: support_vra.py  test_vra_reference.py  test_vra_triton.py
fastvideo/attention/: attention_weight_dump.md  attention_weight_dump.py
fastvideo/attention/backends/: attention_backend.md  flash_attn.py  sdpa.md  sdpa.py  sliding_variable_rate_attn.py
fastvideo/configs/pipelines/: hunyuan.py
fastvideo/pipelines/: composed_pipeline_base.py
fastvideo/pipelines/stages/: causal_denoising.py  (+3 more)
fastvideo/worker/: multiproc_executor.py
scripts/eval/: run_vbench_custom.sh
scripts/inference/: attention_hunyuan.md  attention_hunyuan.sh  attention_hunyuan_modal.md  attention_hunyuan_sweep.sh  modal_attention_hunyuan.py  v1_inference_hunyuan.sh  v1_inference_hunyuan_FA3_modal.sh  v1_inference_hunyuan_STA_modal.sh  v1_inference_hunyuan_VRA.sh  v1_inference_hunyuan_VRA_modal.sh
utils/: attention_local_recall.py  plot_attention.md  plot_attention.py
(+3 files in other folders)
